#2 fixed header text align

--- a/client/resources/css/styles.css
+++ b/client/resources/css/styles.css
@@ -35,6 +35,11 @@ nav {
     width: 110px;
 }
 
+#ann-content h2 {
+    text-align: center;
+    margin-top: 50px;
+}
+
 .the-announcement {
     color: black;
 }
